Se avanzó con el informe.

--- a/doc/tpFinal/tpFinal.tex
+++ b/doc/tpFinal/tpFinal.tex
@@ -271,7 +271,7 @@ Estos serán los \textbf{nodos} por donde iterará el método de búsqueda.
 \framesubtitle{Utilización de \textit{Waypoints}}
 \begin{itemize}
 	\item Cada \textit{waypoint} cuenta con una \textbf{ventana cuadrada de vecinos}
-	\item $W_{v} :$ cantidad de waypoints presentes en la ventana
+	\item $W_{v} :$ longitud del lado de la ventana
 	\begin{itemize}
 		\item $W_{v} = 3 :$ la ventana contiene a los 8 vecinos
 		\item $W_{v} = 5 :$ la ventana contiene a los 24 vecinos
